Changeset: updates on configs